--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "next dev -p 8001",
     "build": "next build",
-    "start": "next start -p 8001"
+    "start": "next start -p 8001",
+    "prime": "npx prisma generate"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -20,17 +21,21 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
+    "prisma": "^6.0.1",
     "shadcn": "^3.6.3",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@babel/core": "^7.28.5",
+    "@prisma/client": "^6.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -40,10 +45,14 @@
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.1",
     "@tailwindcss/typography": "^0.5.19",
+    "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "motion": "^12.25.0",
     "next": "^15.0.3",
     "next-themes": "^0.4.6",
@@ -56,6 +65,7 @@
     "sonner": "^2.0.7",
     "stripe": "^20.1.2",
     "styled-components": "^6.2.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
