--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -45,21 +46,38 @@
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.1",
     "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-blockquote": "^3.15.3",
+    "@tiptap/extension-bullet-list": "^3.15.3",
+    "@tiptap/extension-dropcursor": "^3.15.3",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-list-item": "^3.15.3",
+    "@tiptap/extension-mention": "^3.15.3",
+    "@tiptap/extension-ordered-list": "^3.15.3",
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
+    "@tiptap/suggestion": "^3.15.3",
+    "@vercel/blob": "^2.0.0",
     "ai": "^6.0.31",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "motion": "^12.25.0",
+    "nanoid": "^5.1.6",
     "next": "^15.0.3",
     "next-themes": "^0.4.6",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-spinners": "^0.17.0",
     "recharts": "^3.6.0",
     "sharp": "^0.34.5",
@@ -70,6 +88,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
+    "tippy.js": "^6.3.7",
     "tw-animate-css": "^1.4.0"
   },
   "overrides": {
