--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "nanoid": "^5.1.6",
     "next": "^15.0.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.5.0",
