--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nodemailer": "^7.0.12",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
     "react-spinners": "^0.17.0",
