--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
@@ -70,7 +71,7 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
-    "motion": "^12.25.0",
+    "motion": "^12.27.1",
     "nanoid": "^5.1.6",
     "next": "^15.0.3",
     "next-themes": "^0.4.6",
