--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.1",
+    "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-blockquote": "^3.15.3",
     "@tiptap/extension-bullet-list": "^3.15.3",
@@ -73,7 +74,7 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
-    "motion": "^12.28.1",
+    "motion": "^12.29.2",
     "nanoid": "^5.1.6",
     "next": "^15.0.3",
     "next-themes": "^0.4.6",
