--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@babel/core": "^7.28.5",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -53,6 +54,8 @@
     "@tiptap/extension-blockquote": "^3.15.3",
     "@tiptap/extension-bullet-list": "^3.15.3",
     "@tiptap/extension-dropcursor": "^3.15.3",
+    "@tiptap/extension-hard-break": "^3.17.1",
+    "@tiptap/extension-heading": "^3.17.1",
     "@tiptap/extension-image": "^3.15.3",
     "@tiptap/extension-link": "^3.15.3",
     "@tiptap/extension-list-item": "^3.15.3",
