--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 8001",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=8192' next build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=8192' TIMING='1' next build",
     "start": "next start -p 8001",
     "prime": "npx prisma generate"
   },
